# UCR-Dining

./: .gitmodules  CMakeLists.txt  DiningHallDish.cpp  DiningHallDish.h  Dish.h  Ingredient.cpp  Ingredient.h  README.md  Restaurant.cpp  Restaurant.h  RestaurantDish.cpp  RestaurantDish.h  RestaurantHours.cpp  Sorting.cpp  Sorting.h  SortingTest.cpp  hours.h  layout.cpp  main.cpp  mainwindow.ui  output.cpp  tester
include/: BuildCampusRestaurants.h  BuildDiningHalls.h  CampusRestaurant.h  DiningHall.h  DiningHallDish.h  Dish.h  Display.h  Restaurant.h  RestaurantDish.h  RestaurantHours.h  Sorting.h
src/: BuildCampusRestaurants.cpp  BuildDiningHalls.cpp  CampusRestaurant.cpp  DiningHall.cpp  DiningHallDish.cpp  Dish.cpp  Display.cpp  Ingredient.cpp  Restaurant.cpp  RestaurantDish.cpp  RestaurantHours.cpp  Sorting.cpp
test/: CampusRestaurantTest.cpp  DiningHallDishTest.cpp  DiningHallTest.cpp  IngredientTest.cpp  RestaurantDishTest.cpp  RestaurantHoursTests.cpp  RestaurantTests.cpp  SortingTest.cpp
